feat: add two new pages

--- a/avtoramka.by/home.html
+++ b/avtoramka.by/home.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Индивидуальные рамки</title>
-    <link rel='stylesheet' type="text/css" href='lib/unitegallery/css/unite-gallery.css' type='text/css' />
-    <link rel='stylesheet' type="text/css" href='lib/unitegallery/ug-theme-tiles.js' type='text/css' />
-    <link rel="stylesheet" type="text/css" href="lib/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css" />
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/Individual_framework.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel='stylesheet' type="text/css" href='lib/unitegallery/css/unite-gallery.css' type='text/css' />
+    <link rel='stylesheet' type="text/css" href='lib/unitegallery/ug-theme-tiles.js' type='text/css' />
+
+    <link rel="stylesheet" href="assets/mobirise-icons/mobirise-icons.css">
+    <link rel="stylesheet" href="assets/mobirise-icons/mbr-additional.css">
+    <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
 </head>
 
 <body>
@@ -44,6 +46,22 @@
             </div>
         </div>
     </section>
+    <div class="container">
+        <div class="contact-info ">
+            <div class="contact-info-block first-in-europe">
+                <div class="contact-info-image"> <a href="https://mobirise.com" class="etl-icon icon-target mbr-iconfont"></a> </div>
+                <h3>ВПЕРВЫЕ НА ЕВРОПЕЙСКОМ РЫНКЕ</h3>
+            </div>
+            <div class="contact-info-block new-direction">
+                <div class="contact-info-image"> <a href="https://mobirise.com" class="etl-icon icon-telescope mbr-iconfont"></a> </div>
+                <h3>НОВОЕ НАПРАВЛЕНИЕ В АВТО-СТАЙЛИНГЕ</h3>
+            </div>
+            <div class="contact-info-block unique-tool">
+                <div class="contact-info-image"> <a href="https://mobirise.com" class="etl-icon icon-strategy mbr-iconfont"></a> </div>
+                <h3>УНИКАЛЬНЫЙ РЕКЛАМНЫЙ ИНСТРУМЕНТ</h3>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <h2 class="class_h2">Примеры рамок</h2>
     </div>
@@ -96,6 +114,24 @@
 
     </div>
     <div class="container">
+        <h2 class="class_h2">Преимущество</h2>
+    </div>
+    <p class="adavantages-info">Maecenas at blandit augue, a blandit mi. Morbi non aliquet orci, in iaculis diam. Fusce fermentum rutrum ullamcorper. Integer nec odio nibh. Proin rhoncus pellentesque vulputate mauris et tincidun</p>
+    <div class="advantages-list">
+        <div class="advantages-item">
+            <h4>Подходят всем</h4>
+            <p>Наши рамки подходят абсолютно для всех типов автомобилей</p>
+        </div>
+        <div class="advantages-item">
+            <h4>Гарантия</h4>
+            <p>На 100% влагозащищенная конструкция позволяет использовать рамки в любую погоду. Рабочая темература от -40°С до +50°С</p>
+        </div>
+        <div class="advantages-item">
+            <h4>Монтаж</h4>
+            <p>Монтаж рамки очень прост и занимает не более 10-15 минут. Потребляемое напряжение 12 Волт, что равносильно зарядке телефона от прикуривателя</p>
+        </div>
+    </div>
+    <!-- <div class="container">
         <h2 class="class_h2">Порядок работы с нами</h2>
     </div>
     <div class="advantages_block">
@@ -163,8 +199,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <section class="promotional_offers">
+    </div> -->
+    <!-- <section class="promotional_offers">
         <div class="promotional_offers_bg">
             <div class="promotional_offers_bg_in">
                 <div class="promotional_offers_text">
@@ -191,6 +227,14 @@
                 </div>
             </div>
         </div>
+    </section> -->
+    <section class="about-our-work">
+        <div class="tonner">
+            <div class="container">
+            <h2 class="class_h2">About our work</h2>
+            </div>
+            <p class="about-our-work-text">Ut euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massaUt euismod odio metus, non volutpat elit varius eu. Sed blandit ligula id sodales hendrerit. Vivamus molestie massa</p>
+    </div>        
     </section>
     <div class="container">
         <h2 class="class_h2">Пакеты по стоимости</h2>
@@ -304,124 +348,10 @@
             </div>
         </div>
     </section>
-    <div class="container margin_for_reviews">
-        <h2 class="class_h2">Отзывы</h2>
-    </div>
-    <div class="reviews-block">
-        <div class="reviews">
-            <div class="review flex">
-                <div class="review-photo"></div>
-                <div class="review-info">
-                    <div class="review-author-name">Мария Габер</div>
-                    <div class="review-author-status">Одесситка</div>
-                    <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-                        consequatur fuga, illum quasi hic explicabo</div>
-                </div>
-            </div>
-            <div class="review flex">
-                <div class="review-photo"></div>
-                <div class="review-info">
-                    <div class="review-author-name">Мария Габер</div>
-                    <div class="review-author-status">Одесситка</div>
-                    <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-                        consequatur fuga, illum quasi hic explicabo</div>
-                </div>
-            </div>
-            <div class="review flex">
-                <div class="review-photo"></div>
-                <div class="review-info">
-                    <div class="review-author-name">Мария Габер</div>
-                    <div class="review-author-status">Одесситка</div>
-                    <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
-                        consequatur fuga, illum quasi hic explicabo</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <h2 class="class_h2">Остались вопросы</h2>
-    </div>
-    <div class="container">
-        <div class="faq_block">
-            <div class="content">
-                <div>
-                    <input type="checkbox" id="question1" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question1" class="question">
-                        This is the question that will be asked?
-                    </label>
-                    <div class="answers">
-                        What if the answer is really long and wraps the whole page and you never want to finish it
-                        but you have to because its the answer!
-                    </div>
-                </div>
 
-                <div>
-                    <input type="checkbox" id="question2" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question2" class="question">
-                        Short?
-                    </label>
-                    <div class="answers">
-                        short!
-                    </div>
-                </div>
-
-                <div>
-                    <input type="checkbox" id="question3" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question3" class="question">
-                        But what if the question is really long and wraps the whole page and you feel like you will
-                        never finish reading the question?
-                    </label>
-                    <div class="answers">
-                        This is the answer!
-                    </div>
-                </div>
-            </div>
-            <div class="content">
-                <div>
-                    <input type="checkbox" id="question4" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question4" class="question">
-                        This is the question that will be asked?
-                    </label>
-                    <div class="answers">
-                        What if the answer is really long and wraps the whole page and you never want to finish it
-                        but you have to because its the answer!
-                    </div>
-                </div>
-
-                <div>
-                    <input type="checkbox" id="question5" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question5" class="question">
-                        Short?
-                    </label>
-                    <div class="answers">
-                        short!
-                    </div>
-                </div>
-
-                <div>
-                    <input type="checkbox" id="question6" name="q" class="questions">
-                    <div class="plus">+</div>
-                    <label for="question6" class="question">
-                        But what if the question is really long and wraps the whole page and you feel like you will
-                        never finish reading the question?
-                    </label>
-                    <div class="answers">
-                        This is the answer!
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     <script type='text/javascript' src='lib/unitegallery/unitegallery.min.js'></script>
     <script type='text/javascript' src='lib/unitegallery/ug-theme-tiles.js'></script>
-    <script type='text/javascript' src='lib/slick/reviews.js'></script>
-    <script type='text/javascript' src='lib/slick/slick.min.js'></script>
     <script type="text/javascript">
         jQuery(document).ready(function () {
             jQuery("#gallery").unitegallery();
