--- a/avtoramka.by/Individual_framework.html
+++ b/avtoramka.by/Individual_framework.html
@@ -213,7 +213,7 @@
                         <li><span>8Tb</span>vulputate auctor</li>
                     </ul>
                     <div role="button">
-                        <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                        <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                     </div>
                     <p class="hide-text">* eleifend ultrices lorem uttra posuere sapien maximus massa neque, et molestie
                         ex vulputate auctor</p>
@@ -233,7 +233,7 @@
                         <li><span>8Tb</span>vulputate auctor</li>
                     </ul>
                     <div role="button">
-                        <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                        <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                     </div>
                     <p class="hide-text">* eleifend ultrices lorem uttra posuere sapien maximus massa neque, et molestie
                         ex vulputate auctor</p>
@@ -253,7 +253,7 @@
                         <li><span>8Tb</span>vulputate auctor</li>
                     </ul>
                     <div role="button">
-                        <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                        <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                     </div>
                     <p class="hide-text">* eleifend ultrices lorem uttra posuere sapien maximus massa neque, et molestie
                         ex vulputate auctor</p>
