--- a/avtoramka.by/suvenir_numbers.html
+++ b/avtoramka.by/suvenir_numbers.html
@@ -56,7 +56,7 @@
                     клубов и рекламных агентств.
                 </div>
                 <div role="button">
-                    <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                    <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                 </div>
             </div>
             <div class="wrapper_gift_slider">
@@ -82,7 +82,7 @@
                     клубов и рекламных агентств.
                 </div>
                 <div role="button">
-                    <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                    <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                 </div>
             </div>
             <div class="wrapper_gift_slider">
@@ -108,7 +108,7 @@
                     клубов и рекламных агентств.
                 </div>
                 <div role="button">
-                    <a href="#" class="btn btn-primary" role="button">buy it now</a>
+                    <a href="#" class="btn btn-primary" role="button">Заказать консультакцию</a>
                 </div>
             </div>
             <div class="wrapper_gift_slider">
